2006-11-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-w3-retrieve): Use `decode-coding-string' instead of
	`mm-decode-coding-string'.

2006-11-22  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-get-headers): Simplify.

2006-11-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-message-owner-regexp): Fix regexp.
	(mixi-message-title-regexp): Ditto.
	(mixi-message-time-regexp): Ditto.
	(mixi-message-realize): Follow the change above.

2006-11-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-log-list-regexp): Fix regexp.

2006-11-22  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-comment-article): Simplify.

2006-11-22  KAMO Tomoyuki  <kto2038@yahoo.co.jp>

	* mixi.el (mixi-get-matched-items): Fix the condition for quitting
	retrieval.

2006-11-20  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-get-comment-p): New user option.
	(shimbun-mixi-get-headers): Use it.

2006-11-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-content-regexp): Fix regexp.
	(mixi-topic-realize): Follow the change above.
	(mixi-topic-comment-list-regexp): Fix regexp.
	(mixi-diary-comment-list-regexp): Follow the change above.
	(mixi-get-comments): Ditto.

2006-11-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-comment-list-page): Use `all' instead of '%d'.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-new-comments): Return diaries instead of comments.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-group-alist): Add `messages' to default
	value.
	(shimbun-mixi-make-xref): Follow the change above.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-get-headers): Stop getting comment's
	headers when it was already shown.
	(shimbun-get-headers): Follow the change above.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el: New file.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): Don't expand twice.
